--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html lang="en">
     <head>
+        <link rel="stlyesheet" href="style.css">
         <title>Peach Dream</title>
     </head>
     <body>
