--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <html lang="en">
     <head>
-        <link rel="stlyesheet" href="style.css">
+        <link rel="stlyesheet" href="style.css"/>
         <title>Peach Dream</title>
     </head>
     <body>
         <h1>Hello World!</h1>
+        <script src="script.js"></script>
     </body>
 </html>
